--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -1,33 +1,32 @@
-name: Build Windows MSI
+name: Build Windows
 
 on:
   push:
     branches:
       - main
-    paths:
-      - '**.go'
-      - 'go.mod'
-      - 'go.sum'
-      - 'packaging/windows/**'
-      - '.github/workflows/build-windows.yml'
   pull_request:
     branches:
       - main
-    paths:
-      - '**.go'
-      - 'go.mod'
-      - 'go.sum'
-      - 'packaging/windows/**'
-      - '.github/workflows/build-windows.yml'
+  workflow_call:
+    inputs:
+      version:
+        required: true
+        type: string
 
 jobs:
   build-windows:
+    strategy:
+      matrix:
+        include:
+          - arch: amd64
+            goarch: amd64
+          - arch: arm64
+            goarch: arm64
+
     runs-on: windows-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
       - name: Set up Go
         uses: actions/setup-go@v5
@@ -37,9 +36,9 @@ jobs:
       - name: Run tests
         run: go test -v ./...
 
-      - name: Build Windows binary
+      - name: Build Windows binary for ${{ matrix.arch }}
         run: |
-          $VERSION = "dev"
+          $VERSION = "${{ inputs.version || 'dev' }}"
           $BUILD_TIME = (Get-Date -Format "yyyy-MM-dd_HH:mm:ss")
           $GIT_COMMIT = git rev-parse --short HEAD
           
@@ -49,13 +48,20 @@ jobs:
           
           $env:CGO_ENABLED = "0"
           $env:GOOS = "windows"
-          $env:GOARCH = "amd64"
+          $env:GOARCH = "${{ matrix.goarch }}"
           
           go build -ldflags $LDFLAGS -trimpath -o bin/sc-agent.exe ./cmd/daemon
         shell: pwsh
 
       - name: Copy safe-chain to bin
-        run: Copy-Item -Path "dist\safe-chain-windows-amd64.exe" -Destination "bin\safe-chain.exe"
+        run: Copy-Item -Path "dist\safe-chain-windows-${{ matrix.goarch }}.exe" -Destination "bin\safe-chain.exe"
+        shell: pwsh
+
+      - name: Calculate binary checksum
+        run: |
+          $hash = (Get-FileHash -Path bin/sc-agent.exe -Algorithm SHA256).Hash.ToLower()
+          echo "$hash" > checksum-windows-${{ matrix.arch }}.txt
+          Write-Host "windows/${{ matrix.arch }} SHA256: $hash"
         shell: pwsh
 
       - name: Install WiX Toolset
@@ -66,19 +72,14 @@ jobs:
 
       - name: Build MSI installer
         run: |
-          .\packaging\windows\build-msi.ps1 -Version "dev" -BinDir ".\bin" -OutputDir ".\dist"
+          .\packaging\windows\build-msi.ps1 -Version "${{ inputs.version || 'dev' }}" -BinDir ".\bin" -OutputDir ".\dist"
         shell: pwsh
 
-      - name: Upload MSI artifact
+      - name: Upload Windows artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: sc-agent-windows-msi
-          path: dist/*.msi
-          retention-days: 30
-
-      - name: Upload Windows binary artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: sc-agent-windows-exe
-          path: bin/sc-agent.exe
-          retention-days: 30
+          name: sc-agent-windows-${{ matrix.arch }}
+          path: |
+            dist/*.msi
+            bin/sc-agent.exe
+            checksum-windows-${{ matrix.arch }}.txt
