--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -50,7 +50,7 @@ jobs:
           $env:GOOS = "windows"
           $env:GOARCH = "${{ matrix.goarch }}"
           
-          go build -ldflags $LDFLAGS -trimpath -o bin/sc-agent.exe ./cmd/daemon
+          go build -ldflags $LDFLAGS -trimpath -o bin/sc-agent-windows-${{ matrix.arch }}.exe ./cmd/daemon
         shell: pwsh
 
       - name: Copy safe-chain to bin
@@ -59,7 +59,7 @@ jobs:
 
       - name: Calculate binary checksum
         run: |
-          $hash = (Get-FileHash -Path bin/sc-agent.exe -Algorithm SHA256).Hash.ToLower()
+          $hash = (Get-FileHash -Path bin/sc-agent-windows-${{ matrix.arch }}.exe -Algorithm SHA256).Hash.ToLower()
           echo "$hash" > checksum-windows-${{ matrix.arch }}.txt
           Write-Host "windows/${{ matrix.arch }} SHA256: $hash"
         shell: pwsh
@@ -72,7 +72,12 @@ jobs:
 
       - name: Build MSI installer
         run: |
-          .\packaging\windows\build-msi.ps1 -Version "${{ inputs.version || 'dev' }}" -BinDir ".\bin" -OutputDir ".\dist"
+          .\packaging\windows\build-msi.ps1 -Version "${{ inputs.version || 'dev' }}" -Arch "${{ matrix.arch }}" -BinDir ".\bin" -OutputDir "."
+        shell: pwsh
+
+      - name: Prepare artifacts
+        run: |
+          Move-Item -Path bin\sc-agent-windows-${{ matrix.arch }}.exe -Destination sc-agent-windows-${{ matrix.arch }}.exe
         shell: pwsh
 
       - name: Upload Windows artifacts
@@ -80,6 +85,6 @@ jobs:
         with:
           name: sc-agent-windows-${{ matrix.arch }}
           path: |
-            dist/*.msi
-            bin/sc-agent.exe
+            sc-agent-windows-${{ matrix.arch }}.msi
+            sc-agent-windows-${{ matrix.arch }}.exe
             checksum-windows-${{ matrix.arch }}.txt
