--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -50,7 +50,7 @@ jobs:
           $env:GOOS = "windows"
           $env:GOARCH = "${{ matrix.goarch }}"
           
-          go build -ldflags $LDFLAGS -trimpath -o bin/aikido-agent.exe ./cmd/daemon
+          go build -ldflags $LDFLAGS -trimpath -o bin/AikidoAgent.exe ./cmd/daemon
         shell: pwsh
 
       - name: Copy safe-chain to bin
@@ -59,7 +59,7 @@ jobs:
 
       - name: Calculate binary checksum
         run: |
-          $hash = (Get-FileHash -Path bin/aikido-agent.exe -Algorithm SHA256).Hash.ToLower()
+          $hash = (Get-FileHash -Path bin/AikidoAgent.exe -Algorithm SHA256).Hash.ToLower()
           echo "$hash" > checksum-windows-${{ matrix.arch }}.txt
           Write-Host "windows/${{ matrix.arch }} SHA256: $hash"
         shell: pwsh
@@ -77,14 +77,14 @@ jobs:
 
       - name: Prepare artifacts
         run: |
-          Move-Item -Path bin\aikido-agent.exe -Destination aikido-agent-windows-${{ matrix.arch }}.exe
+          Move-Item -Path bin\AikidoAgent.exe -Destination AikidoAgent.${{ matrix.arch }}.exe
         shell: pwsh
 
       - name: Upload Windows artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: aikido-agent-windows-${{ matrix.arch }}
+          name: AikidoAgent.${{ matrix.arch }}
           path: |
-            aikido-agent-windows-${{ matrix.arch }}.msi
-            aikido-agent-windows-${{ matrix.arch }}.exe
+            AikidoAgent.${{ matrix.arch }}.msi
+            AikidoAgent.${{ matrix.arch }}.exe
             checksum-windows-${{ matrix.arch }}.txt
