--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -79,7 +79,8 @@ jobs:
       - name: Upload Windows artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: AikidoAgent.${{ matrix.arch }}.msi
+          name: aikido-agent-windows-${{ matrix.arch }}
           path: |
+            AikidoAgent.${{ matrix.arch }}.exe
             AikidoAgent.${{ matrix.arch }}.msi
             checksum-windows-${{ matrix.arch }}.txt
