--- a/.github/workflows/build-unix.yml
+++ b/.github/workflows/build-unix.yml
@@ -46,21 +46,21 @@ jobs:
           BUILD_TIME=$(date -u '+%Y-%m-%d_%H:%M:%S')
           GIT_COMMIT=$(git rev-parse --short HEAD)
           
-          LDFLAGS="-X 'github.com/aikido/aikido-agent/internal/version.Version=$VERSION' \
-                   -X 'github.com/aikido/aikido-agent/internal/version.BuildTime=$BUILD_TIME' \
-                   -X 'github.com/aikido/aikido-agent/internal/version.GitCommit=$GIT_COMMIT'"
+          LDFLAGS="-X 'github.com/aikido/safechain-agent/internal/version.Version=$VERSION' \
+                   -X 'github.com/aikido/safechain-agent/internal/version.BuildTime=$BUILD_TIME' \
+                   -X 'github.com/aikido/safechain-agent/internal/version.GitCommit=$GIT_COMMIT'"
           
           echo "Building darwin/${{ matrix.goarch }}..."
           CGO_ENABLED=0 GOOS=darwin GOARCH=${{ matrix.goarch }} go build \
             -ldflags "$LDFLAGS -s -w" \
             -trimpath \
-            -o aikido-agent-darwin-${{ matrix.arch }} \
+            -o safechain-agent-darwin-${{ matrix.arch }} \
             ./cmd/daemon
 
       - name: Calculate binary checksum
         id: checksum
         run: |
-          SHA=$(shasum -a 256 aikido-agent-darwin-${{ matrix.arch }} | cut -d' ' -f1)
+          SHA=$(shasum -a 256 safechain-agent-darwin-${{ matrix.arch }} | cut -d' ' -f1)
           echo "sha=$SHA" >> $GITHUB_OUTPUT
           echo "${{ matrix.arch }} SHA256: $SHA"
           echo "$SHA" > checksum-darwin-${{ matrix.arch }}.txt
@@ -68,7 +68,7 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: aikido-agent-darwin-${{ matrix.arch }}
+          name: safechain-agent-darwin-${{ matrix.arch }}
           path: |
-            aikido-agent-darwin-${{ matrix.arch }}
+            safechain-agent-darwin-${{ matrix.arch }}
             checksum-darwin-${{ matrix.arch }}.txt
