--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -42,7 +42,7 @@ jobs:
           $BUILD_TIME = (Get-Date -Format "yyyy-MM-dd_HH:mm:ss")
           $GIT_COMMIT = git rev-parse --short HEAD
           
-          $LDFLAGS = "-X 'github.com/aikido/aikido-agent/internal/version.Version=$VERSION' -X 'github.com/aikido/aikido-agent/internal/version.BuildTime=$BUILD_TIME' -X 'github.com/aikido/aikido-agent/internal/version.GitCommit=$GIT_COMMIT' -s -w"
+          $LDFLAGS = "-X 'github.com/aikido/safechain-agent/internal/version.Version=$VERSION' -X 'github.com/aikido/safechain-agent/internal/version.BuildTime=$BUILD_TIME' -X 'github.com/aikido/safechain-agent/internal/version.GitCommit=$GIT_COMMIT' -s -w"
           
           New-Item -ItemType Directory -Force -Path bin
           
@@ -50,12 +50,12 @@ jobs:
           $env:GOOS = "windows"
           $env:GOARCH = "${{ matrix.goarch }}"
           
-          go build -ldflags $LDFLAGS -trimpath -o bin/AikidoAgent.exe ./cmd/daemon
+          go build -ldflags $LDFLAGS -trimpath -o bin/SafeChainAgent.exe ./cmd/daemon
         shell: pwsh
 
       - name: Calculate binary checksum
         run: |
-          $hash = (Get-FileHash -Path bin/AikidoAgent.exe -Algorithm SHA256).Hash.ToLower()
+          $hash = (Get-FileHash -Path bin/SafeChainAgent.exe -Algorithm SHA256).Hash.ToLower()
           echo "$hash" > checksum-windows-${{ matrix.arch }}.txt
           Write-Host "windows/${{ matrix.arch }} SHA256: $hash"
         shell: pwsh
@@ -73,14 +73,14 @@ jobs:
 
       - name: Prepare artifacts
         run: |
-          Move-Item -Path bin\AikidoAgent.exe -Destination AikidoAgent.${{ matrix.arch }}.exe
+          Move-Item -Path bin\SafeChainAgent.exe -Destination SafeChainAgent.${{ matrix.arch }}.exe
         shell: pwsh
 
       - name: Upload Windows artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: aikido-agent-windows-${{ matrix.arch }}
+          name: safechain-agent-windows-${{ matrix.arch }}
           path: |
-            AikidoAgent.${{ matrix.arch }}.exe
-            AikidoAgent.${{ matrix.arch }}.msi
+            SafeChainAgent.${{ matrix.arch }}.exe
+            SafeChainAgent.${{ matrix.arch }}.msi
             checksum-windows-${{ matrix.arch }}.txt
